--- a/css/style.css
+++ b/css/style.css
@@ -9,6 +9,8 @@
   --cornflower-bg: #e7e9fc;
   --grey-company-border: #8e8f99;
   --footer-link: #31d0aa;
+  --backdrop-bg: #fcfcfc;
+  --tra: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 body {
   font-family: "Roboto", sans-serif;
@@ -88,11 +90,37 @@ ol {
   letter-spacing: 0.02em;
   color: var(--primary-color-tittle);
   padding: 24px 0;
+  position: relative;
+  /* transition-property: color;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1); */
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .site-nav.link:hover,
-.site-nav.link:focus {
+.site-nav.link:focus,
+.site-nav.link:hover:after,
+.site-nav.link:focus:after,
+.site-nav.current::after {
   color: var(--filter-color);
+  opacity: 1;
+}
+
+.current {
+  color: var(--filter-color);
+}
+
+.site-nav::after {
+  content: "";
+  border-radius: 2px;
+  width: 100%;
+  height: 4px;
+  display: block;
+  background-color: var(--filter-color);
+  position: absolute;
+  bottom: 0;
+  opacity: 0;
+  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .font {
@@ -105,6 +133,7 @@ ol {
   letter-spacing: 0.02em;
   color: var(--secondary-color-tittle);
   padding: 24px 0;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .mail-tel:hover,
 .mail-tel:focus {
@@ -181,6 +210,7 @@ ol {
   height: 56px;
   border: none;
   border-radius: 4px;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .first-button:hover,
 .first-button:focus {
@@ -278,6 +308,9 @@ ol {
   padding: 12px 24px;
   border: 1px solid var(--filter-first-color);
   border-radius: 4px;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .filters:hover,
@@ -428,6 +461,7 @@ ol {
 
 .cards-link {
   display: block;
+  transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .cards-link:hover,
@@ -467,6 +501,7 @@ ol {
   display: flex;
   align-items: center;
   justify-content: center;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .soc-link:hover,
 .soc-link:focus {
@@ -503,6 +538,8 @@ ol {
   align-items: center;
   justify-content: center;
   color: var(--grey-company-border);
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .customers-a:hover,
@@ -556,6 +593,7 @@ ol {
   display: flex;
   align-items: center;
   justify-content: center;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .footer-icons:hover,
@@ -574,4 +612,62 @@ ol {
   background-color: var(--filter-bg-color);
   border-radius: 4px;
   margin-bottom: 8px;
+}
+
+/* Модальное окно */
+.backdrop {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(46, 47, 66, 0.4);
+}
+
+.backdrop.is-hidden {
+  opacity: 1;
+  pointer-events: none;
+  visibility: hidden;
+}
+
+.modal {
+  position: relative;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+
+  width: 408px;
+  height: 576px;
+  background-color: var(--backdrop-bg);
+  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 1px 3px rgba(0, 0, 0, 0.12),
+    0px 2px 1px rgba(0, 0, 0, 0.2);
+  border-radius: 4px;
+}
+
+.button-modal {
+  position: absolute;
+  width: 24px;
+  height: 24px;
+  border-radius: 50%;
+  display: flex;
+  top: 24px;
+  right: 24px;
+  align-items: center;
+  justify-content: center;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  background-color: var(--cornflower-bg);
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  cursor: pointer;
+  padding: 8px;
+}
+
+.button-modal:hover,
+.button-modal:focus {
+  background-color: var(--filter-color);
+  fill: var(--primary-whte-color);
+}
+
+.vector {
+  fill: var(--primary-color-tittle);
 }
