--- a/css/style.css
+++ b/css/style.css
@@ -635,7 +635,6 @@ ol {
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-
   width: 408px;
   height: 576px;
   background-color: var(--backdrop-bg);
@@ -670,4 +669,37 @@ ol {
 
 .vector {
   fill: var(--primary-color-tittle);
+}
+
+/* выезжающие карточки */
+
+.overlay-div {
+  position: relative;
+  overflow: hidden;
+}
+
+.overlay-card {
+  font-family: "Roboto";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 24px;
+  letter-spacing: 0.02em;
+  color: var(--filter-bg-color);
+  background-color: var(--button-bg-color);
+  padding: 40px 32px 0px 32px;
+
+  overflow: hidden;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+
+  transform: translate(0, 100%);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.cards-li:hover .overlay-card {
+  transform: translate(0, 0);
 }
