--- a/css/style.css
+++ b/css/style.css
@@ -104,6 +104,7 @@ ol {
 .site-nav.current::after {
   color: var(--filter-color);
   opacity: 1;
+  bottom: -1px;
 }
 
 .current {
@@ -310,6 +311,7 @@ ol {
   border-radius: 4px;
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1),
     background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    border-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
     box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
@@ -622,25 +624,28 @@ ol {
   width: 100%;
   height: 100%;
   background-color: rgba(46, 47, 66, 0.4);
+  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .backdrop.is-hidden {
-  opacity: 1;
+  opacity: 0;
   pointer-events: none;
   visibility: hidden;
 }
 
 .modal {
-  position: relative;
+  position: absolute;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
   width: 408px;
-  height: 576px;
+  min-height: 584px;
   background-color: var(--backdrop-bg);
   box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 1px 3px rgba(0, 0, 0, 0.12),
     0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 4px;
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .button-modal {
@@ -654,21 +659,24 @@ ol {
   align-items: center;
   justify-content: center;
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    border 250ms cubic-bezier(0.4, 0, 0.2, 1),
     fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
   background-color: var(--cornflower-bg);
   border: 1px solid rgba(0, 0, 0, 0.1);
   cursor: pointer;
-  padding: 8px;
+  padding: 0;
 }
 
 .button-modal:hover,
 .button-modal:focus {
   background-color: var(--filter-color);
   fill: var(--primary-whte-color);
+  border: none;
 }
 
 .vector {
   fill: var(--primary-color-tittle);
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 /* выезжающие карточки */
@@ -687,7 +695,7 @@ ol {
   letter-spacing: 0.02em;
   color: var(--filter-bg-color);
   background-color: var(--button-bg-color);
-  padding: 40px 32px 0px 32px;
+  padding: 40px 32px;
 
   overflow: hidden;
   position: absolute;
@@ -700,6 +708,7 @@ ol {
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
+.cards-li:hover .overlay-card,
 .cards-li:hover .overlay-card {
   transform: translate(0, 0);
 }
