--- a/css/style.css
+++ b/css/style.css
@@ -542,6 +542,7 @@ ol {
   color: var(--grey-company-border);
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1),
     border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transform: translateY(0%);
 }
 
 .customers-a:hover,
@@ -659,8 +660,7 @@ ol {
   align-items: center;
   justify-content: center;
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
-    border 250ms cubic-bezier(0.4, 0, 0.2, 1),
-    fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    border 250ms cubic-bezier(0.4, 0, 0.2, 1);
   background-color: var(--cornflower-bg);
   border: 1px solid rgba(0, 0, 0, 0.1);
   cursor: pointer;
