--- a/css/style.css
+++ b/css/style.css
@@ -675,7 +675,6 @@ ol {
 }
 
 .vector {
-  fill: var(--primary-color-tittle);
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
@@ -710,5 +709,5 @@ ol {
 
 .cards-li:hover .overlay-card,
 .cards-li:hover .overlay-card {
-  transform: translate(0, 0);
+  transform: translateY(0%);
 }
