--- a/css/style.css
+++ b/css/style.css
@@ -468,6 +468,7 @@ ol {
 
 .cards-link:hover,
 .cards-link:focus {
+  transform: translateY(0%)
   box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
     0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
 }
@@ -703,7 +704,7 @@ ol {
   width: 100%;
   height: 100%;
 
-  transform: translate(0, 100%);
+  transform: translateY(100%);
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
