--- a/css/style.css
+++ b/css/style.css
@@ -99,13 +99,14 @@ ol {
 
 .site-nav.link:hover,
 .site-nav.link:focus,
-.site-nav.link:hover:after,
-.site-nav.link:focus:after,
 .site-nav.current::after {
   color: var(--filter-color);
   opacity: 1;
   bottom: -1px;
 }
+
+/* .site-nav.link:hover:after,
+.site-nav.link:focus:after,  */
 
 .current {
   color: var(--filter-color);
@@ -458,7 +459,7 @@ ol {
 }
 .cards-li {
   width: calc((100% - 48px) / 3);
-  background-color: var(--cornflower-bg);
+  background-color: var(--primary-whte-color);
 }
 
 .cards-link {
